2012-04-29  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_balloon_mode): new function
	(avt_draw_avatar, avt_draw_balloon, avt_draw_balloon2)
	(avt_move_in, avt_move_out, avt_start): adapted
	(lua/lua-avt.c): adapted

2012-04-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_avatar_window): new function

	* avatar.c (avt_show_image): inner window becomes image

	* avatar.c (avt_resize, avt_toggle_fullscreen, avt_switch_mode):
	fullscreen mode respects size of inner window

	* avatar.c (avt_analyze_event):
	make mousehandler work (differently), when there is no textfield

2012-04-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c: add code for resizing again

2012-04-14  Andreas K. Foerster  <info@akfoerster.de>

	* bdf2c: make function name configurable

	* akfavatar.h (avt_get_font_char): replaces get_font_char
	avatar.c, lua/akfavatar-graphic.c: adapted

2012-04-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_analyze_event): code cleanup

	* avatar.c (avt_key): parameter may be NULL

2012-04-12  Andreas K. Foerster  <info@akfoerster.de>

	* example.c: include XPM file

2012-04-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-akfavatar-prg.c (help, check_options, initialize):
	support options for fullscreen mode (-f, -F)

	* avatar.c (avt_navigate): fix size with window offset

	* lua/lua-avt.c: avt.title()

2012-04-10  Andreas K. Foerster  <info@akfoerster.de>

	* lua-avt.c (lavt_avatar_image_default, lavt_avatar_image_none):
	functions removed again

	* lua-avt.c (lavt_avatar_image): renamed from lavt_avatar_image_data

	* lua-avt.c (lavt_show_image): renamed from lavt_show_image_string
	also supports XPM data in a table now

	* lua-avt.c: avt.load_audio_string and avt.load_base_audio_string were
	renamed to avt.load_audio and avt.load_base_audio

	* avatar.c (avt_wait_button, avt_decide): store/restore background

	* avatar.c (avt_save_background): new function
