@@ -370,6 +370,10 @@ procedure BalloonSize(height, width: integer);
 procedure BalloonWidth(width: integer);
 procedure BalloonHeight(height: integer);
 
+{ set the balloon mode }
+{ 0 = say, 1 = think, 2 = separate }
+procedure SetBalloonMode(mode: integer);
+
 { set/get scroll mode }
 { 0 = off (page-flipping), 1 = normal }
 procedure SetScrollMode(mode: integer);
@@ -718,6 +722,10 @@ function avt_decide: CBoolean; libakfavatar 'avt_decide';
 
 procedure avt_lock_updates(lock: CBoolean);
   libakfavatar 'avt_lock_updates';
+
+procedure avt_set_balloon_mode(mode: Cint); 
+  libakfavatar 'avt_set_balloon_mode';
+
 
 {$IfNDef __GPC__}
 
@@ -1242,6 +1250,12 @@ if not initialized then initializeAvatar;
 avt_set_balloon_height(height);
 ScrSize.y := avt_get_max_y;
 Window(1, 1, ScrSize.x, ScrSize.y);
+end;
+
+procedure SetBalloonMode(mode: integer);
+begin
+if not initialized then initializeAvatar;
+avt_set_balloon_mode(mode)
 end;
 
 procedure waitkey;
