@@ -68,7 +68,7 @@
   Pascal-API changes:
   - AvatarImageFile, AvatarImageData, AvatarImageXPM, AvatarImageXBM
     initialize the library now
-  - new functions: AvatarImageDefault, AvatarImageNone
+  - new functions: AvatarImageDefault, AvatarImageNone, SetBalloonMode
 
 
 * AKFAvatar 0.21.2
